# scum-v-bringup

./: .gitignore  404.html  README.md  SCuM-V23.html  digital-baseband.html  digital-core.html  encryption-modules.html  index.html  oscillators.html  overview.html  package-lock.json  power-system.html  radar.html  radio.html  remove_comments.sh  uv-adc.html
.github/workflows/: docs-nextra.yml  docs.yaml  publish.yml
404/: index.html
api-reference/: index.html
archive/scum-v23/: index.html
bootloading-guide/: index.html
digital-baseband/: index.html
digital-core/: index.html
docs/: README.md  SCuM-V23.adoc  digital-baseband.adoc  digital-core.adoc  encryption-modules.adoc  next.config.mjs  oscillators.adoc  overview.adoc  package-lock.json  package.json  power-system.adoc  radar.adoc  radio.adoc  uv-adc.adoc
docs-nextra/: package-lock.json  package.json  theme.config.tsx
docs-nextra/pages/: _meta.js  bootloading-guide.mdx  digital-baseband.mdx  firmware-development.mdx  fpga-setup.mdx  hardware-setup.mdx  index.mdx  overview.mdx  radio.mdx  uv-adc.mdx
docs/components/: Icon.tsx  (+1 more)
firmware-development/: index.html
fpga-setup/: index.html
hardware-setup/: index.html
hw/: client.py
oscillators/: index.html
overview/: index.html
pcb/: .gitignore
power-system/: index.html
radar/: index.html
radio/: index.html
sw/: baseband.py  hello_world.py  scumv_tuning.py  sensor_adc.py  tl_host.py  tl_host_sim.py
sw/proxyFESVR/src/: CMakeLists.txt  fesvr.cpp  fesvr.h  main.cpp  tsi.cpp  tsi.h  uartLoopback  uartLoopback.cpp
uv-adc/: index.html
(+947 files in other folders)
